--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,15 @@
-title: Your awesome title
+title: Janvi Rathi
 author: GitHub User
-email: your-email@domain.com
+email: janvirathee@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hellow People,
+  so we creating something here, let me tell you guys about me
+  I'm Janvi Rathi, an UG 2nd Year CSE from AIT Pune. 
+  
+  Exploring Github!!
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+twitter_username: shellie_10 # DO NOT include the @ character, or else the build will fail!
+github_username:  shellie_10 # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
